api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api-container
          image: registry.cluster.wik.cloud/public/echo
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
