api-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-pod
spec:
  containers:
    - name: api-container
      image: registry.cluster.wik.cloud/public/echo
