replicaset-api-pod.yaml
# service for api-replicaset pods forwarding traffic to port 8080
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
